objects/DecsOnD__Policy__c.object
<CustomObject>
    <customHelpPage>DecsOnD__PolicyDetailHelp</customHelpPage>
    <description>A business policy maintained on the Decisions on Demand server</description>
    <fields>
        <fullName>DecsOnD__Active_Version_Label__c</fullName>
        <label>Active Version Label</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Active_Version_Number__c</fullName>
        <label>Active Version Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Active_Version__c</fullName>
        <formula>IF ( 
    (DecsOnD__Active_Version_Number__c &lt;= 0) ,  
    &quot;&lt;none&gt;&quot; ,  
    &quot;#&quot; &amp; RPAD(TEXT( DecsOnD__Active_Version_Number__c), 4) &amp; &quot; -- &quot; &amp;
        IF ( ISBLANK(DecsOnD__Active_Version_Label__c) ,  
            &quot;&quot;, 
            BLANKVALUE(DecsOnD__Active_Version_Label__c, &quot;&lt;no label&gt;&quot;)
        )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Applies_to__c</fullName>
        <description>The type of Salesforce object to which this policy applies</description>
        <inlineHelpText>The type of Salesforce object to which this policy applies</inlineHelpText>
        <label>Applies to</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Author_Versioning_Rights__c</fullName>
        <description>Defines what actions a user with Author access rights is granted with respect to policy version</description>
        <label>Author Versioning Rights</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Activate</fullName>
                    <default>true</default>
                    <label>Activate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DecsOnD__Current_Version_Label__c</fullName>
        <label>Current Version Label</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Current_Version_Number__c</fullName>
        <label>Current Version Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Current_Version__c</fullName>
        <formula>IF ( 
    (DecsOnD__Current_Version_Number__c &lt;= 0) ,  
    &quot;&lt;none&gt;&quot; ,  
    &quot;#&quot; &amp; RPAD(TEXT( DecsOnD__Current_Version_Number__c), 4) &amp; &quot; -- &quot; &amp;
        IF ( ISBLANK(DecsOnD__Current_Version_Label__c) ,  
            &quot;&quot;, 
            BLANKVALUE(DecsOnD__Current_Version_Label__c, &quot;&lt;no label&gt;&quot;)
        )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__DecisionPointConfiguration__c</fullName>
        <description>Keeps local copy of decision point configuration. For internal use only</description>
        <inlineHelpText>For internal use only</inlineHelpText>
        <label>Decision Point Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DecsOnD__DecisionTableConfiguration__c</fullName>
        <description>Keeps local copy of decision table configurations. For internal use only</description>
        <inlineHelpText>For internal use only</inlineHelpText>
        <label>Decision Table Configurations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Description__c</fullName>
        <description>Free text description of the business policy</description>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Documentation_Formula__c</fullName>
        <formula>HYPERLINK(DecsOnD__Documentation_Link__c, &apos;View&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Documentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Documentation_Link__c</fullName>
        <description>Link to online documentation for the policy</description>
        <inlineHelpText>Online documentation</inlineHelpText>
        <label>Documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Label__c</fullName>
        <description>User-friendly name for the policy</description>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__LockExpires__c</fullName>
        <description>Date and time the current lock expires</description>
        <label>Lock Expires</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DecsOnD__LockedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who last locked the policy</description>
        <label>Locked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Log_level__c</fullName>
        <label>Log level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                    <default>true</default>
                    <label>Production</label>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Trace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DecsOnD__Revision__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Schedule__c</fullName>
        <description>For internal use only. Stores (optional) schedule for automated invocation of policy</description>
        <inlineHelpText>For internal use only</inlineHelpText>
        <label>Schedule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Status_Derived__c</fullName>
        <formula>IF(AND(DecsOnD__Active_Version_Number__c=0,ISPICKVAL(DecsOnD__Status__c, &apos;Active&apos;)), &apos;Draft&apos;, TEXT(DecsOnD__Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Status__c</fullName>
        <description>The status of the policy. All policies can be browsed, but only Active policies can be invoked or edited</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DecsOnD__Template_Name__c</fullName>
        <description>Name of the template from which this policy was created</description>
        <label>Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Triggers_enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>A System Administrator or Decisions on Demand Administrator use to control the visibility of the Triggers section for a specific policy</description>
        <inlineHelpText>Control the visibility of the Triggers section</inlineHelpText>
        <label>Triggers enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DecsOnD__UUID__c</fullName>
        <description>Unique identifier for the policy</description>
        <label>UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DecsOnD__ftxt_Status__c</fullName>
        <formula>DecsOnD__Status_Derived__c &amp;
IF(
OR( 
    ISPICKVAL(DecsOnD__Status__c, &apos;Draft&apos;),
    ISPICKVAL(DecsOnD__Status__c, &apos;Active&apos;),
    ISPICKVAL(DecsOnD__Status__c, &apos;Archived&apos;)),
&quot; [&quot; &amp;  HYPERLINK(&quot;/apex/DecsOnD__PolicyLifecycleStatus?id=&quot;&amp;  Id &amp; &quot;&amp;type=change&quot;, &quot;Change&quot;, &quot;_top&quot;) &amp; &quot;]&quot;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Business Policy</label>
    <listViews>
        <fullName>DecsOnD__Active</fullName>
        <columns>NAME</columns>
        <columns>DecsOnD__Applies_to__c</columns>
        <columns>DecsOnD__Status_Derived__c</columns>
        <columns>DecsOnD__Current_Version__c</columns>
        <columns>DecsOnD__Active_Version__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>DecsOnD__Description__c</columns>
        <columns>DecsOnD__Documentation_Formula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DecsOnD__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>DecsOnD__All</fullName>
        <columns>NAME</columns>
        <columns>DecsOnD__Applies_to__c</columns>
        <columns>DecsOnD__Status_Derived__c</columns>
        <columns>DecsOnD__Current_Version__c</columns>
        <columns>DecsOnD__Active_Version__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>DecsOnD__Description__c</columns>
        <columns>DecsOnD__Documentation_Formula__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DecsOnD__Not_active</fullName>
        <columns>NAME</columns>
        <columns>DecsOnD__Applies_to__c</columns>
        <columns>DecsOnD__Status_Derived__c</columns>
        <columns>DecsOnD__Current_Version__c</columns>
        <columns>DecsOnD__Active_Version__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>DecsOnD__Description__c</columns>
        <columns>DecsOnD__Documentation_Formula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DecsOnD__Status__c</field>
            <operation>notEqual</operation>
            <value>Active</value>
        </filters>
        <label>Not Active</label>
    </listViews>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Policies</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>DecsOnD__Prevent_AppliesTo_change</fullName>
        <active>true</active>
        <description>Policy root objects are determined by the Decisions on Demand server, cannot be changed in Salesforce</description>
        <errorConditionFormula>ISCHANGED(  DecsOnD__Applies_to__c  ) &amp;&amp; NOT ( ISNEW())</errorConditionFormula>
        <errorDisplayField>DecsOnD__Applies_to__c</errorDisplayField>
        <errorMessage>Cannot change this field from inside Salesforce - contact your administrator or support@decisionsondemand.com for further assistance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DecsOnD__Prevent_renaming</fullName>
        <active>true</active>
        <description>Policy names are managed on the Decisions on Demand server, they cannot be changed in Salesforce</description>
        <errorConditionFormula>ISCHANGED( Name ) &amp;&amp; NOT ( ISNEW())</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Rename of Policy is not allowed from inside Salesforce - contact your administrator or support@decisionsondemand.com for further assistance</errorMessage>
    </validationRules>
</CustomObject>